Bug 1544632 - Check for BrowserParent destruction before sending StopIMEStateManagement IPC message. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D30007