dom/ipc/BrowserParent.h
@@ -573,6 +573,8 @@ class BrowserParent final : public PBrowserParent,
   // PuppetWidget's origin to absolute screen coordinates in the child.
   LayoutDeviceIntPoint GetClientOffset();
 
+  void StopIMEStateManagement();
+
   /**
    * Native widget remoting protocol for use with windowed plugins with e10s.
    */
